[gd_scene load_steps=8 format=3 uid="uid://b4rcov0tppuuf"]

[ext_resource type="Script" path="res://scene/main.gd" id="1_tqn72"]
[ext_resource type="Script" path="res://scene/login/login.gd" id="1_uo3a7"]
[ext_resource type="Texture2D" uid="uid://depl1ja1jnd8l" path="res://asset/background.png" id="2_or1ts"]

[sub_resource type="Animation" id="Animation_1wd16"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoginPannel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(269, 152)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mask:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_jaa26"]
resource_name = "login_enter"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoginPannel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(333, -360), Vector2(333, 191)]
}

[sub_resource type="Animation" id="Animation_jrahv"]
resource_name = "login_mask"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mask:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uui88"]
_data = {
"RESET": SubResource("Animation_1wd16"),
"login_enter": SubResource("Animation_jaa26"),
"login_mask": SubResource("Animation_jrahv")
}

[node name="Login" type="Node"]
script = ExtResource("1_tqn72")

[node name="LoginCanvas" type="CanvasLayer" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("1_uo3a7")
parent = NodePath("..")

[node name="Login" type="Control" parent="LoginCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="LoginCanvas/Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_or1ts")

[node name="LoginPannel" type="Panel" parent="LoginCanvas/Login"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 269.0
offset_top = 152.0
offset_right = 883.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2

[node name="Address" type="LineEdit" parent="LoginCanvas/Login/LoginPannel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -73.0
offset_right = 109.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
text = "ws://127.0.0.1:8888"
placeholder_text = "Address"
alignment = 1
max_length = 255
virtual_keyboard_type = 7

[node name="Uid" type="LineEdit" parent="LoginCanvas/Login/LoginPannel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -28.0
offset_right = 109.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Uid"
alignment = 1

[node name="Secret" type="LineEdit" parent="LoginCanvas/Login/LoginPannel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 20.0
offset_right = 106.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Secret"
alignment = 1
max_length = 32
secret = true

[node name="Login" type="Button" parent="LoginCanvas/Login/LoginPannel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 84.0
offset_right = 72.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
text = "Login"
icon_alignment = 1

[node name="ProgressBox" type="Control" parent="LoginCanvas/Login"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="ColorRect" parent="LoginCanvas/Login/ProgressBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="ProgressBar" type="ProgressBar" parent="LoginCanvas/Login/ProgressBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 15.0
offset_right = -32.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mask" type="ColorRect" parent="LoginCanvas/Login"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Dialog" type="AcceptDialog" parent="LoginCanvas/Login"]
initial_position = 2
size = Vector2i(420, 100)

[node name="LoginAnimation" type="AnimationPlayer" parent="LoginCanvas/Login"]
libraries = {
"": SubResource("AnimationLibrary_uui88")
}

[connection signal="pressed" from="LoginCanvas/Login/LoginPannel/Login" to="LoginCanvas" method="_on_login_pressed"]
